# Runx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  runx.toml
crates/runx-tauri/: Cargo.toml
crates/runx-tauri/src/: lib.rs
demo-project/: Cargo.toml
demo-project/src/: main.rs
runx-charts/: Cargo.toml
runx-charts/src/: lib.rs
src/: affected.rs  artifacts.rs  config.rs  dashboard.html  db.rs  discovery.rs  graph.rs  junit.rs  lib.rs  main.rs  report.rs  runner.rs  server.rs  task.rs  test_model.rs  test_runner.rs  watcher.rs
src/ai/: annotator.rs  mod.rs  providers.rs
src/coverage/: cobertura.rs  lcov.rs  mod.rs  threshold.rs
src/db/: cache.rs  flaky.rs  mod.rs  queries.rs  schema.rs
src/execution/: cache.rs  mod.rs  parallel.rs  retry.rs  runner.rs
src/git/: commits.rs  diff.rs  mod.rs
src/graph/: affected.rs  mod.rs  toposort.rs  workspace.rs
src/notifications/: discord.rs  github.rs  mod.rs  slack.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/widgets/: log_viewer.rs  mod.rs  task_list.rs  test_tree.rs
