[package]
name = "runx"
version = "1.0.0"
edition = "2021"
description = "Rust Test Explorer - Discover, run, and manage tests with TUI"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching
notify = "6"

# Async runtime (for potential future use)
tokio = { version = "1", features = ["rt", "sync"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3"
