[package]
name = "runx"
version = "1.0.0"
edition = "2021"
description = "Rust Test Explorer - Discover, run, and manage tests with TUI"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
shellexpand = "3"

# File watching
notify = "6"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
futures = "0.3"

# HTTP server (dashboard)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (notifications, AI)
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

# XML parsing (JUnit)
quick-xml = "0.31"

# TUI
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3"
