[package]
name = "runx-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri command logger for Runx Debug Dashboard"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
